--- a/portfolio/layouts/_default/baseof.html
+++ b/portfolio/layouts/_default/baseof.html
@@ -1,7 +1,9 @@
 <html>
     <head>
         <title>{{ .Title }}: {{ .Site.Title }}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
+
     <body>
         <nav>   
             <a href="/">{{ .Site.Title }}</a>
