--- a/portfolio/layouts/_default/baseof.html
+++ b/portfolio/layouts/_default/baseof.html
@@ -5,14 +5,14 @@
     </head>
 
     <body>
-        <nav>   
-            <a href="/">{{ .Site.Title }}</a>
-            <ul>
-                <li><a href="/">About</a></li>
-                <li><a href="/projects">Projects</a></li>
-                <li><a href="/publications">Publications</a></li>
-                <li><a href="/contact">Contact</a></li>
-            </ul>
+        <nav class="navbar bg-dark sticky-top navbar-expand-lg">
+            <div class="container">
+                <a href="/">{{ .Site.Title }}</a>
+                <a href="/">About</a>
+                <a href="/projects">Projects</a>
+                <a href="/publications">Publications</a>
+                <a href="/contact">Contact</a>
+            </div>   
         </nav>
 
         <main>
