--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -1,5 +1,3 @@
 {{ define "main" }}
-    <h1>About Me</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    {{ .Content }}
 {{ end }}
